--- a/src/styles/JoinUsNow.module.css
+++ b/src/styles/JoinUsNow.module.css
@@ -10,6 +10,12 @@
     margin: auto;
 }
 
+.dot {
+    display: flex;
+    justify-content: center;
+    margin: 30px 0 50px 0;
+}
+
 .introduction p:nth-child(2) {
     font-size: 54px;
 }
