--- a/src/styles/TitleCard.module.css
+++ b/src/styles/TitleCard.module.css
@@ -13,9 +13,16 @@
 }
 
 .infoTitle {
+    margin-top: 20px;
     display: flex;
     align-items: center;
     column-gap: 12px;
+    width: fit-content;
+    padding: 6px 14px 6px 6px;
+    background-color: rgba(0, 0, 0, 0);
+    backdrop-filter: blur(2.5px);
+    border-radius: 10px;
+    border: 1px solid var(--token-30ee69d1-cae6-4a5c-9af2-db5c94a12e77, rgba(255, 255, 255, 0.05));
 }
 
 .subTitle {
