--- a/src/styles/TitleCard.module.css
+++ b/src/styles/TitleCard.module.css
@@ -13,7 +13,6 @@
 }
 
 .infoTitle {
-    margin-top: 20px;
     display: flex;
     align-items: center;
     column-gap: 12px;
@@ -24,11 +23,14 @@
     border-radius: 10px;
     border: 1px solid var(--token-30ee69d1-cae6-4a5c-9af2-db5c94a12e77, rgba(255, 255, 255, 0.05));
 }
-
+.mainTitle{
+    font-size: 54px;
+}
 .subTitle {
     text-align: center;
     margin-top: 26px;
     font-size: 16px;
+    white-space: nowrap;
 }
 
 .subTitle p {
@@ -37,4 +39,18 @@
 
 .subTitle p:last-child {
     margin: 5px 0 0 0;
+}
+
+@media (max-width: 600px) {
+    .mainTitle{
+        font-size: 35px; 
+    }
+   .subTitle{
+    
+   }
+   .all-container img{
+    width: 100%;
+    max-width: 257px;
+    height: 49px;
+   }
 }
