--- a/src/styles/Home/MainBanner.module.css
+++ b/src/styles/Home/MainBanner.module.css
@@ -1,4 +1,5 @@
 .allContainer {
+    /*padding-left: 120px;*/
     position: relative;
     display: flex;  
     align-items: center;
@@ -9,7 +10,6 @@
 .MainTitleContainer {
     position: absolute;  
     z-index: 1;
-    text-align: center;
     color: white;
 } 
 .infoTitle{
