--- a/src/styles/Home/MentorVoices.module.css
+++ b/src/styles/Home/MentorVoices.module.css
@@ -1,3 +1,14 @@
+.card{
+    display: flex;
+}
+.gridContainer{
+        display: grid; 
+        gap: 40px;
+        grid-template-columns: repeat(3,1fr);
+        margin: 70px auto auto auto;
+        
+      
+}
 .all-container {
     background: linear-gradient(0.07383128568086761deg, var(--token-f5219c3a-5ee2-4639-9e23-4bdcf5509ebd, rgba(0, 85, 255, 0.15)) 0%, var(--token-b456af2e-fd88-41ae-8686-ad7692875dfd, rgba(97, 97, 97, 0.09)) 100%);
     border-radius: 20px;
@@ -19,7 +30,7 @@
 .message {
     margin-top: 20px;
     width: 100%;
-    max-width: 310px;
+     
     color: #FFFFFF80;
 }
 
@@ -40,4 +51,20 @@
     width: 4.7px;
     height: 5px;
     background-color: white;
+}
+@media (max-width: 1024px) {
+    .gridContainer {
+        grid-template-columns: repeat(2, 1fr); /* 2열로 변경 */
+        gap: 40px;
+    }
+}
+@media (max-width: 768px) {
+     
+    .gridContainer {
+        grid-template-columns: repeat(1, 1fr); 
+        margin: auto;
+    }
+    .all-container {
+        max-width: 100%;  
+    }
 }
