--- a/src/styles/Home/MainAboutAppNMe.module.css
+++ b/src/styles/Home/MainAboutAppNMe.module.css
@@ -24,32 +24,50 @@
     margin: 10px 0 66px 0;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1224px) {
     .Container {
         flex-direction: column;
-        gap: 40px;
-        align-items: center;
+        padding: 0 30px;
     }
 
     .Container img {
         max-width: 80%;
         height: 406px;
+        margin: auto;
+    }
+
+    .mirim {
+        font-size: 18px;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
 
     .Container {
-        gap: 20px;
+        flex-direction: column-reverse;
     }
 
     .Container img {
-        max-width: 100%;
-        height: 340px;
+        width: 100%;
+        max-width: 308px;
+        height: 318px;
+        margin: auto auto 70px auto;
+    }
+
+    .title-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
 
     .mirim {
         font-size: 16px;
-
+        margin: 24px 0 0 0;
     }
+
+    .content {
+        margin: 8px 0 27px 0;
+    }
+
 }
