--- a/src/styles/Home/SectionBlock.module.css
+++ b/src/styles/Home/SectionBlock.module.css
@@ -1,39 +1,51 @@
 .SectionContainer {
-    display: flex; 
-    justify-content: center;
-    align-items: flex-end; 
-    padding: 0 90px;
-  }
-  
-  .contentContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    white-space: nowrap; 
-  }
-  
-  .sideImage{
-    width: 100%;  
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 0 90px;
+}
+
+.contentContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.sideImage {
+  width: 100%;
+  max-width: 566px;
+  margin-top: 30px;
+  height: 237px;
+}
+
+
+@media (min-width: 1700px)and(max-width: 1800px) {
+  .sideImage {
     max-width: 500px;
-    margin-top: 30px;
-    height: 237px;
-  } 
-  
-  @media (max-width: 1650px) {
-    .sideImage{ 
-        max-width: 350px;
-    }
-  } 
-  @media (max-width: 1260px) {
-    .sideImage {
-      display: none;  
-    }
-  
-    .SectionContainer {
-      justify-content: center; /* 콘텐츠를 가운데 정렬 */
-      padding: 20px; /* 여백 유지 */
-    }
   }
-  
+}
+
+@media (max-width: 1700px) {
+  .sideImage {
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 1690px) {
+  .sideImage {
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .sideImage {
+    display: none;
+  }
+
+  .SectionContainer {
+    justify-content: center;
+    padding: 20px;
+  }
+}
