--- a/src/styles/QnA/FaQ.module.css
+++ b/src/styles/QnA/FaQ.module.css
@@ -2,17 +2,22 @@
     display: flex;
     justify-content: center;
     column-gap: 60px;
-    margin: 50px 0 120px 0;
+    margin: 120px 0 120px 0;
 }
 
 @media (max-width:1200px) {
     .allContainer {
         flex-direction: column;
+        gap: 60px;
+        padding: 0 50px;
+        /*임시*/
     }
 }
 
 @media (max-width:700px) {
     .allContainer {
-        margin: 10px 0 0;
+        margin: 100px 0 0;
+        gap: 40px;
+        padding: 0 30px;
     }
 }
