--- a/src/styles/QnA/FaQList.module.css
+++ b/src/styles/QnA/FaQList.module.css
@@ -8,17 +8,52 @@
 }
 
 .qnaList-container {
-
     border-radius: 20px;
-    background-color: #000;
+    background-color: #080808;
     font-size: 18px;
-    height: 86px;
     padding: 30px;
-    border: 1px solid var(--token-22cf3d5b-05c3-4cf9-9506-44947f466e1e, rgba(255, 255, 255, 0.15));
+    border: 0.5px solid rgba(255, 255, 255, 0.15);
+    transition: all 0.3s ease-in-out;
+}
+
+/* click햇을때 */
+.qnaList-container.open {
+    background-color: #080808;
+    border: 1px solid rgba(255, 255, 255, 0.15);
 }
 
 .title-container {
+    font-size: 18px;
     cursor: pointer;
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.faq-content {
+    max-height: 500px;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+}
+
+.faq-content p {
+    margin: 17px 0 0 0;
+    color: #FFFFFF99;
+    font-size: 16px;
+}
+
+.toggle-icon {
+    font-size: 30px;
+}
+
+@media (max-width:1200px) {
+    .all-container {
+        max-width: none;
+    }
+}
+
+@media (max-width:700px) {
+    .title-container {
+        gap: 40px;
+    }
 }
