--- a/src/styles/QnA/FaQ.module.css
+++ b/src/styles/QnA/FaQ.module.css
@@ -9,7 +9,7 @@
     .allContainer {
         flex-direction: column;
         gap: 60px;
-        padding: 0 50px;
+        /* padding: 0 50px; */
         /*임시*/
     }
 }
@@ -18,6 +18,6 @@
     .allContainer {
         margin: 100px 0 0;
         gap: 40px;
-        padding: 0 30px;
+        /* padding: 0 30px; */
     }
 }
