feat : Slide Photo 구현

--- a/src/styles/Home/ImageSlider.module.css
+++ b/src/styles/Home/ImageSlider.module.css
@@ -22,3 +22,9 @@
     height: 80px;
     object-fit: cover;
 }
+
+@media (max-width: 700px) {
+    .allContainer {
+        display: none;
+    }
+}
