--- a/src/styles/Home/Pages/HomePage.module.css
+++ b/src/styles/Home/Pages/HomePage.module.css
@@ -1,3 +1,8 @@
- .allContainer{
-     
+ .allContainer {}
+
+ .PhotoContainer {
+     display: flex;
+     flex-direction: column;
+     gap: 50px;
+     margin: 70px 0 0 0;
  }
