--- a/src/styles/Home/LanguageCard.module.css
+++ b/src/styles/Home/LanguageCard.module.css
@@ -1,11 +1,11 @@
 .languageCardContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    row-gap: 20px;
+    gap: 24px;
     justify-items: center;
     align-items: center;
-    width: 1300px;
-    margin: 0 auto; 
+    width: 100%;
+    margin: 70px auto 100px auto;
 }
 
 .languageCardContainer div {
@@ -16,37 +16,26 @@
 
 .languageCardContainer img {
     width: 100%;
-    max-width: 384px;
     height: auto;
     object-fit: contain;
 }
 
-@media (max-width: 1200px) {
-    .languageCardContainer {
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
 
-@media (max-width: 810px) {
+
+@media (max-width: 1270px) {
     .languageCardContainer {
+        width: 100%;
         grid-template-columns: repeat(2, 1fr);
     }
-
-    .languageCardContainer {
-        width: 1000px;
-    }
 }
 
-@media (max-width: 390px) {
+@media (max-width: 800px) {
     .languageCardContainer {
-        grid-template-columns: 1fr;
-    }
-
-    .languageCardContainer {
-        width: 260px;
+        grid-template-columns: repeat(1, 1fr);
+        row-gap: 50px;
     }
 
     .languageCardContainer img {
-        max-width: 100%;
+        width: 100%;
     }
 }
