--- a/src/styles/Home/LanguageCard.module.css
+++ b/src/styles/Home/LanguageCard.module.css
@@ -5,7 +5,7 @@
     justify-items: center;
     align-items: center;
     width: 100%;
-    margin: 70px auto 100px auto;
+    margin: 70px auto 180px auto;
 }
 
 .languageCardContainer div {
@@ -37,5 +37,6 @@
 
     .languageCardContainer img {
         width: 100%;
+        max-width: 500px;
     }
 }
