--- a/src/styles/JoinUs/JoinForm.module.css
+++ b/src/styles/JoinUs/JoinForm.module.css
@@ -53,7 +53,7 @@ textarea {
 }
 
 button {
-    font-size: 16px;
+    font-size: 18px;
     margin: 39px 0 0 0;
     border-radius: 10px;
     height: 50px;
@@ -68,6 +68,10 @@ button {
 input::placeholder,
 textarea::placeholder {
     color: 999999;
+}
+
+.submitButton:hover {
+    color: #C4C4C4;
 }
 
 @media (max-width: 1200px) {
@@ -104,7 +108,9 @@ textarea::placeholder {
     textarea::placeholder,
     select,
     input,
-    textarea {
+    textarea,
+    button {
         font-size: 15px;
     }
+
 }
