--- a/src/styles/QnA/FaQList.module.css
+++ b/src/styles/QnA/FaQList.module.css
@@ -11,6 +11,7 @@
     border-radius: 20px;
     background-color: #080808;
     font-size: 18px;
+    margin-top: 24px;
     padding: 30px;
     border: 0.5px solid rgba(255, 255, 255, 0.15);
     transition: all 0.3s ease-in-out;
