design : MoveToTop() 추가 및 단위 변경

--- a/src/styles/Prize/OurPrize.module.css
+++ b/src/styles/Prize/OurPrize.module.css
@@ -1,7 +1,7 @@
 .all-container {
     display: flex;
     justify-content: center;
-    gap: 84px;
+    gap: 6vw;
     margin: 208px 0 201px 0;
 }
 
