--- a/src/styles/JoinUs/JoinForm.module.css
+++ b/src/styles/JoinUs/JoinForm.module.css
@@ -10,7 +10,7 @@ label {
     display: flex;
     align-items: center;
     white-space: nowrap;
-    font-size: 18px;
+    font-size: 14px;
     margin: 39px 0 14px 0;
 }
 
@@ -31,7 +31,15 @@ select {
     margin-bottom: 10px;
     border: none;
     color: #FFF;
-    font-size: 18px;
+    font-size: 14px;
+}
+
+.questionBox {
+    height: 100px;
+}
+
+.pwLabel {
+    white-space: wrap;
 }
 
 .firstLine {
@@ -41,7 +49,7 @@ select {
 
 input::placeholder,
 textarea::placeholder {
-    font-size: 18px;
+    font-size: 14px;
 }
 
 textarea {
@@ -49,11 +57,11 @@ textarea {
     background: #333333;
     padding: 18px;
     height: 100px;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 button {
-    font-size: 18px;
+    font-size: 16px;
     margin: 39px 0 0 0;
     border-radius: 10px;
     height: 50px;
@@ -67,11 +75,12 @@ button {
 
 input::placeholder,
 textarea::placeholder {
-    color: 999999;
+    color: #999999;
 }
 
 .submitButton:hover {
     color: #C4C4C4;
+    transition: all 0.8s ease-out;
 }
 
 @media (max-width: 1200px) {
@@ -93,7 +102,6 @@ textarea::placeholder {
 
     label {
         margin: 39px 0 14px 0;
-        font-size: 15px;
     }
 
     button {
@@ -103,14 +111,4 @@ textarea::placeholder {
     textarea {
         height: 250px;
     }
-
-    input::placeholder,
-    textarea::placeholder,
-    select,
-    input,
-    textarea,
-    button {
-        font-size: 15px;
-    }
-
 }
