--- a/src/styles/TitleCard.module.css
+++ b/src/styles/TitleCard.module.css
@@ -52,10 +52,9 @@
         font-size: 35px;
     }
 
-    .subTitle {}
-
     .all-container img {
         width: 100%;
         max-width: 257px;
+        padding: 0 20px;
     }
 }
