--- a/src/styles/Home/Header.module.css
+++ b/src/styles/Home/Header.module.css
@@ -56,7 +56,7 @@
     display: none;
     background: none;
     border: none;
-    outline: none; 
+    outline: none;
     box-shadow: none;
     color: white;
     font-size: 28px;
@@ -71,8 +71,6 @@
     border: none;
 }
 
-
-/* 빈응형 */
 @media (max-width: 1200px) {
     .header {
         padding: 0 50px;
@@ -80,16 +78,10 @@
 }
 
 @media (max-width: 700px) {
-    .header {
-        padding: 0 30px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
     .menuButton {
         display: block;
         order: -1;
+        margin-top: 40px;
     }
 
     .logo {
@@ -101,16 +93,21 @@
         flex-direction: column;
         background: rgba(0, 0, 0, 0.95);
         position: absolute;
-        top: 91px;
+        top: 60px;
         left: 0;
         width: 100%;
-        padding: 20px 0;
-        text-align: center;
+        padding-left: 50px;
+        text-align: left;
         transition: all 0.3s ease-in-out;
+        gap: 0;
     }
 
     .nav ul.active {
         display: flex;
+    }
+
+    .nav li {
+        margin-bottom: 0;
     }
 
     .nav a {
@@ -120,6 +117,16 @@
     }
 
     .applyButton {
+        position: absolute;
+        bottom: 30px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
+        max-width: 300px;
         display: none;
+    }
+    
+    .nav ul.active + .applyButton {
+        display: block;
     }
 }
