--- a/src/styles/Home/Pages/HomePage.module.css
+++ b/src/styles/Home/Pages/HomePage.module.css
@@ -39,9 +39,11 @@
 
     .mainWrapper {
         padding: 0;
+        margin-top: 80px;
     }
 
     .introduce {
         margin-top: 0;
     }
+
 }
