--- a/src/styles/QnA/FaQ.module.css
+++ b/src/styles/QnA/FaQ.module.css
@@ -4,6 +4,11 @@
     column-gap: 60px;
     row-gap: 24px;
     margin: 120px 0 120px 0;
+
+}
+
+.faqAllContainer {
+    padding: 0 120px;
 }
 
 @media (max-width:1200px) {
@@ -11,11 +16,19 @@
         flex-direction: column;
         gap: 60px;
     }
+
+    .faqAllContainer {
+        padding: 0 50px;
+    }
 }
 
 @media (max-width:700px) {
     .allContainer {
         margin: 100px 0 0;
         gap: 40px;
+    }
+
+    .faqAllContainer {
+        padding: 0 30px;
     }
 }
