--- a/src/styles/QnA/FaQList.module.css
+++ b/src/styles/QnA/FaQList.module.css
@@ -1,10 +1,16 @@
-.all-container {
+.all-container,
+.answerAllContainer {
     width: 100%;
-    max-width: 690px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     row-gap: 24px;
+}
+
+.answerAllContainer {
+    margin: auto;
+    width: 100%;
+    max-width: 70%;
 }
 
 .qnaList-container {
@@ -25,10 +31,14 @@
 
 .title-container {
     font-size: 18px;
-    cursor: pointer;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.title-container>span {
+    cursor: pointer;
 }
 
 .faq-content {
@@ -47,14 +57,37 @@
     font-size: 30px;
 }
 
+.modalImg {
+    cursor: pointer;
+    width: 25px;
+    height: 25px;
+}
+
+.questionTitle {
+    position: absolute;
+    margin-left: 50px;
+}
+
 @media (max-width:1200px) {
     .all-container {
-        max-width: none;
+        max-width: 70%;
+        margin: auto;
     }
 }
 
 @media (max-width:700px) {
     .title-container {
-        gap: 40px;
+        gap: 20px;
+    }
+
+    .all-container,
+    .answerAllContainer {
+        max-width: none;
+        padding: 0 30px;
+    }
+
+    .questionTitle {
+        position: static;
+        margin-left: 0;
     }
 }
