--- a/src/styles/Home/Footer.module.css
+++ b/src/styles/Home/Footer.module.css
@@ -37,12 +37,12 @@
     margin-bottom: 10px;
 }
 
-li {
+.pageItem, .socialItem {
     margin-top: 20px;
     font-size: 16px;
 }
 
-li a {
+.socialItem a {
     color: #aaaaaa;
 }
 
@@ -83,7 +83,7 @@ li a {
         font-size: 16px;
     }
 
-    li {
+    .socialItem, .pageItem {
         font-size: 12px;
     }
 
