--- a/src/styles/Prize/Awards.module.css
+++ b/src/styles/Prize/Awards.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     flex-direction: column;
     gap: 20px;
-    margin-top: 40px;
+    /* margin-top: 40px; */
   }
   
   .profileCard {
@@ -13,9 +13,10 @@
     border-radius: 16px;
     width: 350px;
     padding: 24px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
     color: #fff;
-    width: 825px;
+    width: 100%;
+    max-width: 825px;
     border: 1px solid #333333;
   }
   
@@ -74,4 +75,20 @@
     font-size: 16px;
     color: #999999;
   }
+
+
+  @media (max-width: 1200px) {
+    .profileCard {
+        max-width: 614px;
+    }
+
+  }
+
+  @media (max-width: 700px) {
+    .profileCard {
+        max-width: 303px;
+    }
+
+  }
+
   
