--- a/src/styles/Home/MentorVoices.module.css
+++ b/src/styles/Home/MentorVoices.module.css
@@ -10,11 +10,9 @@
 }
 
 .all-container {
-    background: linear-gradient(0.07383128568086761deg,
-            var(--token-f5219c3a-5ee2-4639-9e23-4bdcf5509ebd,
-                rgba(0, 85, 255, 0.15)) 0%,
-            var(--token-b456af2e-fd88-41ae-8686-ad7692875dfd,
-                rgba(97, 97, 97, 0.09)) 100%);
+    border: 6px solid var(--, rgba(255, 255, 255, 0.05));
+    background: linear-gradient(180deg, #2B2B2B 0%, rgba(255, 0, 174, 0.21) 100%);
+    backdrop-filter: blur(2px);
     border-radius: 20px;
     padding: 0 30px;
     opacity: 1;
@@ -25,6 +23,7 @@
 .all-container img {
     width: 100%;
     max-width: 50px;
+    padding-top: 28px;
 }
 
 .memberInfo-container {
@@ -57,6 +56,13 @@
     background-color: white;
 }
 
+.line {
+    background: linear-gradient(90deg, rgba(255, 0, 174, 0.05) 0%, #FF00AE 50%, rgba(255, 0, 174, 0.05) 100%);
+    width: 70%;
+    height: 1px;
+    margin: auto;
+}
+
 @media (max-width: 1200px) {
     .gridContainer {
         grid-template-columns: repeat(1, 1fr);
@@ -78,7 +84,7 @@
 @media (max-width: 600px) {
     .gridContainer {
         grid-template-columns: repeat(1, 1fr);
-        padding: 0 20px;
+        padding: 0 30px;
     }
 
     .all-container {
