fix : qna page에 banner 추가

--- a/src/styles/QnA/QnAPage.module.css
+++ b/src/styles/QnA/QnAPage.module.css
@@ -18,7 +18,7 @@
 }
 
 .qnaList-container {
-    margin: 100px 0;
+    margin: 40px 0;
 }
 
 .faq-all-container {
@@ -26,6 +26,13 @@
     flex-direction: column;
     margin: auto;
     max-width: 70%;
+}
+
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+    margin: 38px 0 220px 0;
+    z-index: 1;
 }
 
 @media (max-width:850px) {
@@ -42,5 +49,13 @@
     .faq-all-container {
         max-width: none;
         padding: 0 30px;
+    }
+
+    .buttonContainer {
+        margin: 38px 0 150px 0;
+    }
+
+    .qnaList-container {
+        margin: 0 0 80px 0;
     }
 }
