--- a/src/styles/JoinUsNow.module.css
+++ b/src/styles/JoinUsNow.module.css
@@ -5,7 +5,7 @@
 }
 
 .all-container {
-    height: 452px;
+    height: 490px;
     background: linear-gradient(180deg, var(--token-f5219c3a-5ee2-4639-9e23-4bdcf5509ebd, rgba(255, 0, 174, 0.15)) 0%, rgb(8, 0, 5) 100%);
     display: flex;
     flex-direction: column;
@@ -18,7 +18,7 @@
 .dot {
     display: flex;
     justify-content: center;
-    margin: 30px 0 50px 0;
+    margin: 65px 0 30px 0;
 }
 
 .introduction p:nth-child(2) {
@@ -27,8 +27,8 @@
 
 .introduction p:nth-child(3) {
     font-size: 54px;
-    color: #FFFFFF99;
-    margin: 10px 0 30px 0;
+    color: #FFF;
+    margin: 10px 0 20px 0;
 }
 
 .introduction p:nth-child(4) {
