--- a/src/styles/Prize/Awards.module.css
+++ b/src/styles/Prize/Awards.module.css
@@ -1,3 +1,44 @@
+.scrollContainer {
+    max-width: 982px;
+    width: 100%;
+    height: 2850px;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: auto;
+
+    mask-image: linear-gradient(rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 12.5%, rgb(0, 0, 0) 87.5%, rgba(0, 0, 0, 0) 100%);
+}
+
+.cardContainer {
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    max-width: 900px;
+    width: 100%;
+    animation: scrollUp 30s linear infinite; 
+}
+
+@keyframes scrollUp {
+    0% {
+        transform: translateY(0%);
+    }
+    100% {
+        transform: translateY(-50%);
+    }
+}
+
+.scrollContainer:hover .cardContainer {
+    animation-play-state: paused;
+}
+
+
+
 .awardsContainer {
     display: flex;
     /* flex-wrap: wrap; */
@@ -11,7 +52,6 @@
   .profileCard {
     background-color: #0E0E0E;
     border-radius: 16px;
-    width: 350px;
     padding: 24px;
     /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
     color: #fff;
@@ -28,8 +68,8 @@
   }
   
   .profileImage {
-    width: 70px;
-    height: 70px;
+    width: 48px;
+    height:48px;
     border-radius: 50%;
   }
   
@@ -80,6 +120,7 @@
   @media (max-width: 1200px) {
     .profileCard {
         max-width: 614px;
+        width: 100%;
     }
 
   }
@@ -92,6 +133,7 @@
     .awardsContainer {
         margin-top: 150px;
     }
+    
 
   }
 
