--- a/src/styles/JoinUs/JoinForm.module.css
+++ b/src/styles/JoinUs/JoinForm.module.css
@@ -6,12 +6,23 @@ form {
     margin: auto;
 }
 
+.borderContainer {
+    max-width: 1300px;
+    width: 100%;
+    height: 1050px;
+    padding: 40px 40px 30px;
+    margin: auto;
+    border: 1px solid rgba(255, 255, 255, 0.05);
+    border-radius: 15px;
+}
+
 label {
     display: flex;
     align-items: center;
     white-space: nowrap;
-    font-size: 14px;
+    font-size: 18px;
     margin: 39px 0 14px 0;
+    margin-left: 10px;
 }
 
 .width {
@@ -27,15 +38,20 @@ select {
     width: 100%;
     border-radius: 5px;
     padding: 18px;
-    background: #333333;
+    background-color: rgba(153, 153, 153, 0.1);
     margin-bottom: 10px;
-    border: none;
+    border: 1px solid rgba(255, 255, 255, 0.05);
     color: #FFF;
     font-size: 14px;
 }
 
+
+
 .questionBox {
-    height: 100px;
+    height: 170px;
+    margin-bottom: 50px;
+    max-width: 1098px;
+    width: 100%;
 }
 
 .pwLabel {
@@ -54,15 +70,16 @@ textarea::placeholder {
 
 textarea {
     border-radius: 5px;
-    background: #333333;
+    background-color: rgba(153, 153, 153, 0.1);
     padding: 18px;
     height: 100px;
-    font-size: 14px;
+    font-size: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.05);
 }
 
 button {
-    font-size: 16px;
-    margin: 39px 0 0 0;
+    font-size: 18px;
+    /* margin: 39px 0 0 0; */
     border-radius: 10px;
     height: 50px;
     border: none;
@@ -71,7 +88,22 @@ button {
         inset 0px 0px 10px 1px rgba(255, 255, 255, 0),
         0px 0px 0px 1px rgb(255, 0, 174);
     cursor: pointer;
+    margin-top: 50px;
+    margin: auto;
+    width: 30%;
 }
+
+.container {
+    max-width: 1178px;
+    width: 100%;
+    height: 470px;
+    padding: 40px 40px 30px;
+    border-radius: 15px;
+    border: 0.5px solid rgba(255, 255, 255, 0.08);
+    background: #080808;
+    margin: auto;
+}
+
 
 input::placeholder,
 textarea::placeholder {
