Design : cardContainer 패딩 추가

--- a/src/styles/Prize/Awards.module.css
+++ b/src/styles/Prize/Awards.module.css
@@ -126,6 +126,11 @@
   }
 
   @media (max-width: 700px) {
+
+    .cardContainer {
+        padding: 40px;
+    }
+
     .awardsContainer {
         padding: 0 30px;
     }
