--- a/src/components/Home/Activity/ActivityInfoCard.module.css
+++ b/src/components/Home/Activity/ActivityInfoCard.module.css
@@ -1,7 +1,7 @@
 .cardContainer {
     position: relative;
     border-radius: 30px;
-    background: linear-gradient(180deg, rgba(43, 43, 43, 1), rgba(255, 0, 174, 0.2));
+    background: linear-gradient(180deg, rgba(43, 43, 43, 0.60), rgba(255, 0, 174, 0.08) 100%);
     backdrop-filter: blur(2px);
     padding: 20px 20px 40px;
     width: 100%;
@@ -13,7 +13,7 @@
     position: absolute;
     inset: -3px; /* 보더 크기 */
     border-radius: 30px;
-    background: linear-gradient(180deg, rgba(43, 43, 43, 1), rgba(255, 0, 174, 0.2)); 
+    background: linear-gradient(180deg, rgba(43, 43, 43, 0.60), rgba(255, 0, 174, 0.17) 100%); 
     z-index: -1;
 }
 
