--- a/src/styles/JoinUs/JoinForm.module.css
+++ b/src/styles/JoinUs/JoinForm.module.css
@@ -9,11 +9,11 @@ form {
 .borderContainer {
     max-width: 1300px;
     width: 100%;
-    height: 1050px;
-    padding: 40px 40px 30px;
+    padding: 60px;
     margin: auto;
-    border: 1px solid rgba(255, 255, 255, 0.05);
+    border: 1px solid rgba(255, 255, 255, 0.08);
     border-radius: 15px;
+    background-color: #0E0E0E;
 }
 
 label {
@@ -91,6 +91,7 @@ button {
     margin-top: 50px;
     margin: auto;
     width: 30%;
+    min-width: 160px;
 }
 
 .container {
@@ -115,9 +116,16 @@ textarea::placeholder {
     transition: all 0.8s ease-out;
 }
 
-@media (max-width: 1200px) {}
+@media (max-width: 1200px) {
+
+}
 
 @media (max-width: 700px) {
+
+    .borderContainer {
+        padding: 0px;
+    }
+
     form {
         padding: 0 10px;
     }
