--- a/src/styles/Home/Header.module.css
+++ b/src/styles/Home/Header.module.css
@@ -162,10 +162,9 @@
         display: block;
     }
 
-    .applyButton button {
+    .applyButton div {
         width: 100%;
         max-width: 640px;
         height: 43px;
-        margin-top: 30px;
     }
 }
