--- a/src/styles/Home/MainAboutAppNMe.module.css
+++ b/src/styles/Home/MainAboutAppNMe.module.css
@@ -78,7 +78,7 @@
 
         .mirim {
             font-size: 16px;
-            margin: 24px 0 0 0;
+            margin: 30px 0;
         }
 
         .content {
