--- a/src/styles/Dot.module.css
+++ b/src/styles/Dot.module.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+
 .Container {
     display: flex;
     flex-direction: column;
@@ -14,6 +21,7 @@
 }
 
 .dot {
+    font-family: 'Pretendard-Regular';
     border-radius: 30px;
     width: 5px;
     height: 5.38px;
