fix : banner 앞으로 보내기

--- a/src/styles/QnA/QnAPage.module.css
+++ b/src/styles/QnA/QnAPage.module.css
@@ -4,6 +4,8 @@
     align-items: center;
     text-align: center;
     margin-top: 130px;
+    z-index: 1;
+    position: relative;
 }
 
 .qna-container {
