--- a/src/styles/TitleCard.module.css
+++ b/src/styles/TitleCard.module.css
@@ -46,6 +46,7 @@
     .mainTitle {
         font-size: 35px;
     }
+
 }
 
 @media (max-width: 600px) {
@@ -57,5 +58,10 @@
         width: 100%;
         max-width: 257px;
         padding: 0 20px;
+    }
+
+    .subTitle p {
+        display: inline;
+        line-height: 1.5;
     }
 }
