--- a/src/styles/Home/Pages/AboutUsPage.module.css
+++ b/src/styles/Home/Pages/AboutUsPage.module.css
@@ -66,6 +66,10 @@
         margin-top: -110px;
         max-width: 400px;
     }
+
+    .bottom {
+        margin-top: 50px;
+    }
 }
 
 @media (max-width: 600px) {
